# my_clue

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Results  compare_timing.py  mean_timing_comparison.csv  readme.md  report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  report3.sqlite  report4.nsys-rep  report4.sqlite  results_unified.csv  run.sh  timing_comparison.csv
Results/: compare_timing.py  results_unified0.csv  results_unified1.csv  results_unified10.csv  results_unified2.csv  results_unified3.csv  results_unified4.csv  results_unified5.csv  results_unified6.csv  results_unified7.csv  results_unified8.csv  results_unified9.csv  results_unified_no_prefetch0.csv  results_unified_no_prefetch1.csv  results_unified_no_prefetch10.csv  results_unified_no_prefetch2.csv  results_unified_no_prefetch3.csv  results_unified_no_prefetch4.csv  results_unified_no_prefetch5.csv  results_unified_no_prefetch6.csv  results_unified_no_prefetch7.csv  results_unified_no_prefetch8.csv  results_unified_no_prefetch9.csv  unified_mean.csv  unified_mean_no_prefetch.csv  unified_std.csv  unified_std_no_prefetch.csv
Results_GraceHopper/: classic_mean.csv  classic_std.csv  mean_timing_comparison.csv  results_classic0.csv  results_classic1.csv  results_classic10.csv  results_classic2.csv  results_classic3.csv  results_classic4.csv  results_classic5.csv  results_classic6.csv  results_classic7.csv  results_classic8.csv  results_classic9.csv  results_unified0.csv  results_unified1.csv  results_unified10.csv  results_unified2.csv  results_unified3.csv  results_unified4.csv  results_unified5.csv  results_unified6.csv  results_unified7.csv  results_unified8.csv  results_unified9.csv  results_unified_no_prefetch0.csv  results_unified_no_prefetch1.csv  results_unified_no_prefetch10.csv  results_unified_no_prefetch2.csv  results_unified_no_prefetch3.csv  results_unified_no_prefetch4.csv  results_unified_no_prefetch5.csv  results_unified_no_prefetch6.csv  results_unified_no_prefetch7.csv  results_unified_no_prefetch8.csv  results_unified_no_prefetch9.csv  unified_mean.csv  unified_mean_no_prefetch.csv  unified_std.csv  unified_std_no_prefetch.csv
Results_H100/: classic_mean.csv  classic_std.csv  mean_timing_comparison.csv  results_classic0.csv  results_classic1.csv  results_classic10.csv  results_classic2.csv  results_classic3.csv  results_classic4.csv  results_classic5.csv  results_classic6.csv  results_classic7.csv  results_classic8.csv  results_classic9.csv  results_unified0.csv  results_unified1.csv  results_unified10.csv  results_unified2.csv  results_unified3.csv  results_unified4.csv  results_unified5.csv  results_unified6.csv  results_unified7.csv  results_unified8.csv  results_unified9.csv  results_unified_no_prefetch0.csv  results_unified_no_prefetch1.csv  results_unified_no_prefetch10.csv  results_unified_no_prefetch2.csv  results_unified_no_prefetch3.csv  results_unified_no_prefetch4.csv  results_unified_no_prefetch5.csv  results_unified_no_prefetch6.csv  results_unified_no_prefetch7.csv  results_unified_no_prefetch8.csv  results_unified_no_prefetch9.csv  unified_mean.csv  unified_mean_no_prefetch.csv  unified_std.csv  unified_std_no_prefetch.csv
Results_L4/: classic_mean.csv  classic_std.csv  mean_timing_comparison.csv  results_classic0.csv  results_classic1.csv  results_classic10.csv  results_classic2.csv  results_classic3.csv  results_classic4.csv  results_classic5.csv  results_classic6.csv  results_classic7.csv  results_classic8.csv  results_classic9.csv  results_unified0.csv  results_unified1.csv  results_unified10.csv  results_unified2.csv  results_unified3.csv  results_unified4.csv  results_unified5.csv  results_unified6.csv  results_unified7.csv  results_unified8.csv  results_unified9.csv  results_unified_no_prefetch0.csv  results_unified_no_prefetch1.csv  results_unified_no_prefetch10.csv  results_unified_no_prefetch2.csv  results_unified_no_prefetch3.csv  results_unified_no_prefetch4.csv  results_unified_no_prefetch5.csv  results_unified_no_prefetch6.csv  results_unified_no_prefetch7.csv  results_unified_no_prefetch8.csv  results_unified_no_prefetch9.csv  unified_mean.csv  unified_mean_no_prefetch.csv  unified_std.csv  unified_std_no_prefetch.csv
Results_L40S/: classic_mean.csv  classic_std.csv  mean_timing_comparison.csv  results_classic0.csv  results_classic1.csv  results_classic10.csv  results_classic2.csv  results_classic3.csv  results_classic4.csv  results_classic5.csv  results_classic6.csv  results_classic7.csv  results_classic8.csv  results_classic9.csv  results_unified0.csv  results_unified1.csv  results_unified10.csv  results_unified2.csv  results_unified3.csv  results_unified4.csv  results_unified5.csv  results_unified6.csv  results_unified7.csv  results_unified8.csv  results_unified9.csv  results_unified_no_prefetch0.csv  results_unified_no_prefetch1.csv  results_unified_no_prefetch10.csv  results_unified_no_prefetch2.csv  results_unified_no_prefetch3.csv  results_unified_no_prefetch4.csv  results_unified_no_prefetch5.csv  results_unified_no_prefetch6.csv  results_unified_no_prefetch7.csv  results_unified_no_prefetch8.csv  results_unified_no_prefetch9.csv  unified_mean.csv  unified_mean_no_prefetch.csv  unified_std.csv  unified_std_no_prefetch.csv
Results_MI250X/: classic_mean.csv  classic_std.csv  mean_timing_comparison.csv  results_classic0.csv  results_classic1.csv  results_classic10.csv  results_classic2.csv  results_classic3.csv  results_classic6.csv  results_classic7.csv  results_classic8.csv  results_classic9.csv  results_unified1.csv  results_unified10.csv  results_unified2.csv  results_unified3.csv  results_unified5.csv  (+11 more)
clueLib/: CMakeLists.txt
clueLib/include/: CLUEAlgo.h  CLUEAlgoAlpaka.h  CLUEAlgoGPU.h  CLUEAlgoGPUHip.h  CUDAEssentials.h  GPUVecArray.h  GPUVecArrayAlpaka.h  LayerTiles.h  LayerTilesAlpaka.h  LayerTilesGPU.h  Points.h  Tiles.h  TilesAlpaka.h  TilesConstants.h  TilesGPU.h
clueLib/src/: CLUEAlgo.cc  CLUEAlgoGPU.cu
src/clue/: CMakeLists.txt
src/clue_cuda_alpaka/: CMakeLists.txt
src/clue_tbb_alpaka/: CMakeLists.txt
(+281 files in other folders)
